package com.vocabulario.app.ui

/** Stable Maestro / Compose UI test selectors (`Modifier.testTag`). */
object TestTags {
    const val AUTH_EMAIL = "auth_email"
    const val AUTH_PASSWORD = "auth_password"
    const val AUTH_SUBMIT = "auth_submit"
    const val AUTH_GOOGLE = "auth_google"
    const val AUTH_TOGGLE_MODE = "auth_toggle_mode"

    const val ONBOARDING_NATIVE = "onboarding_native_lang"
    const val ONBOARDING_CONTINUE = "onboarding_continue"
    const val ONBOARDING_LEARNING = "onboarding_learning_lang"
    const val ONBOARDING_START = "onboarding_start"
    const val ONBOARDING_LEVEL = "onboarding_level"

    const val TAB_DASHBOARD = "tab_dashboard"
    const val TAB_ADD = "tab_add"
    const val TAB_ADD_BADGE = "tab_add_badge"
    const val TAB_LISTS = "tab_lists"
    const val BTN_LEARN = "btn_learn"
    const val BTN_ADD_FIRST_WORDS = "btn_add_first_words"
    const val BTN_CHANGE_LIMIT = "btn_change_limit"
    const val CHIP_LANG = "chip_lang"
    const val BTN_SETTINGS = "btn_settings"
    const val SEARCH_INPUT = "search_input"
    const val SEARCH_SUBMIT = "search_submit"
    const val SEARCH_RESULT = "search_result"
    const val CANDIDATE_ADD = "candidate_add"
    const val BTN_IMPORT_FILE = "btn_import_file"
    const val BTN_IMPORT_PASTE = "btn_import_paste"
    const val IMPORT_PASTE_INPUT = "import_paste_input"
    const val IMPORT_MODE_VOCAB = "import_mode_vocab"
    const val IMPORT_MODE_PRESERVE = "import_mode_preserve"
    const val BTN_IMPORT_CONFIRM = "btn_import_confirm"
    const val BTN_IMPORT_CANCEL = "btn_import_cancel"
    const val IMPORT_START_DIALOG = "import_start_dialog"
    const val IMPORT_LIST_PICKER = "import_list_picker"
    const val IMPORT_BTN_START = "import_btn_start"
    const val IMPORT_STATUS_PANEL = "import_status_panel"
    const val IMPORT_BTN_ABORT = "import_btn_abort"
    const val IMPORT_ABORT_CONFIRM = "import_abort_confirm"
    const val IMPORT_REVIEW_MODAL = "import_review_modal"
    const val IMPORT_REVIEW_ITEM = "import_review_item"
    const val IMPORT_RESULT_MODAL = "import_result_modal"
    const val IMPORT_RESULT_OK = "import_result_ok"
    const val IMPORT_ACCORDION_READY = "import_accordion_ready"
    const val IMPORT_ACCORDION_DUP = "import_accordion_dup"
    const val IMPORT_ACCORDION_FAIL = "import_accordion_fail"
    const val IMPORT_COPY_ERRORS = "import_copy_errors"
    const val DIALOG_CONFIRM = "dialog_confirm"
    const val DIALOG_CANCEL = "dialog_cancel"

    const val LIST_CHIP = "list_chip"
    const val LIST_MENU = "list_menu"
    const val BTN_NEW_LIST = "btn_new_list"
    const val LIST_WORD_TILE = "list_word_tile"
    const val BTN_LIST_SORT = "btn_list_sort"
    const val BTN_LIST_FILTER = "btn_list_filter"
    const val LIST_SEARCH_INPUT = "list_search_input"
    const val SHEET_LIST_SORT = "sheet_list_sort"
    const val SHEET_LIST_FILTER = "sheet_list_filter"
    const val SORT_OPTION_PREFIX = "sort_option_"
    const val FILTER_APPLY = "filter_apply"
    const val BTN_PRACTICE_UNDO = "btn_practice_undo"
    const val BTN_REVEAL = "btn_reveal"
    const val MULTI_CANCEL = "multi_cancel"
    const val MULTI_DELETE = "multi_delete"
    const val MULTI_MOVE = "multi_move"

    const val SHEET_ADD_LEARNING = "sheet_add_learning"
    const val SHEET_ADD_OTHER = "sheet_add_other"
    const val SHEET_LIST_NAME = "sheet_list_name"
    const val SHEET_BACK_FROM_CREATE = "sheet_back_from_create"
    const val SHEET_BACK_FROM_LIST_PICKER = "sheet_back_from_list_picker"
    const val SHEET_CREATE_AND_ADD = "sheet_create_and_add"
    const val SHEET_NEW_LIST = "sheet_new_list"
    const val SHEET_CONFIRM_ADD = "sheet_confirm_add"

    const val BTN_BACK = "btn_back"
    const val PRACTICE_SHOW_ANSWER = "practice_show_answer"
    const val PRACTICE_ANSWER_INPUT = "practice_answer_input"
    const val PRACTICE_CHECK = "practice_check"
    const val PRACTICE_RETRY = "practice_retry"
    const val PRACTICE_EMPTY_BACK = "practice_empty_back"
    const val PRACTICE_WRONG_DISMISS = "practice_wrong_dismiss"
    const val PRACTICE_CHOICE = "practice_choice"
    const val GRADE_AGAIN = "grade_again"
    const val GRADE_HARD = "grade_hard"
    const val GRADE_GOOD = "grade_good"
    const val GRADE_EASY = "grade_easy"

    const val SETTINGS_SECTION_MODE = "settings_section_mode"
    const val SETTINGS_SECTION_DIRECTION = "settings_section_direction"
    const val SETTINGS_SECTION_CARD_LAYOUT = "settings_section_card_layout"
    const val SETTINGS_SECTION_LIMITS = "settings_section_limits"
    const val SETTINGS_SECTION_THEME = "settings_section_theme"
    const val SETTINGS_SECTION_LANGUAGES = "settings_section_languages"
    const val SETTINGS_SECTION_CEFR = "settings_section_cefr"
    const val SETTINGS_MODE_CHOICE = "settings_mode_choice"
    const val SETTINGS_MODE_TYPE = "settings_mode_type"
    const val SETTINGS_MODE_FLASH = "settings_mode_flash"
    const val SETTINGS_TOLERATE_TYPOS = "settings_tolerate_typos"
    const val SETTINGS_DIR_L1_TO_L2 = "settings_dir_l1_to_l2"
    const val SETTINGS_DIR_L2_TO_L1 = "settings_dir_l2_to_l1"
    const val SETTINGS_DIR_RANDOM = "settings_dir_random"
    const val SETTINGS_THEME_LIGHT = "settings_theme_light"
    const val SETTINGS_THEME_DARK = "settings_theme_dark"
    const val SETTINGS_THEME_SYSTEM = "settings_theme_system"
    const val SETTINGS_CHECK_EXAMPLES = "settings_check_examples"
    const val SETTINGS_CHECK_USAGES = "settings_check_usages"
    const val SETTINGS_CHECK_PERIPHRASES = "settings_check_periphrases"
    const val SETTINGS_CHECK_SYN_ANT = "settings_check_syn_ant"
    const val SETTINGS_CHECK_WORD_FAMILY = "settings_check_word_family"
    const val SETTINGS_CHECK_CONJUGATION = "settings_check_conjugation"
    const val SETTINGS_NATIVE_LANG = "settings_native_lang"
    const val SETTINGS_LEARNING_LANG = "settings_learning_lang"
    const val SETTINGS_LOGOUT = "settings_logout"

    const val BTN_VIEW_CARD = "btn_view_card"
    const val BTN_VIEW_CARD_CLOSE = "btn_view_card_close"
    const val BTN_LIST_WORD_MENU = "btn_list_word_menu"
    const val BTN_FIX_CARD = "btn_fix_card"
    const val SHEET_CORRECTION_REPORT = "sheet_correction_report"
    const val CORRECTION_SECTION_PREFIX = "correction_section_"
    const val CORRECTION_NOTE = "correction_note"
    const val BTN_CORRECTION_SUBMIT = "btn_correction_submit"
    const val DIALOG_CORRECTION_RESULT = "dialog_correction_result"
    const val BTN_CORRECTION_OK = "btn_correction_ok"
    const val BTN_CORRECTION_EDIT_SELF = "btn_correction_edit_self"
    const val SHEET_SELF_EDIT = "sheet_self_edit"
    const val SELF_EDIT_LEMMA = "self_edit_lemma"
    const val SELF_EDIT_POS = "self_edit_pos"
    const val SELF_EDIT_GLOSS = "self_edit_gloss"
    const val BTN_SELF_EDIT_SAVE = "btn_self_edit_save"
    const val DIALOG_SELF_EDIT_WARNING = "dialog_self_edit_warning"
    const val BTN_SELF_EDIT_WARNING_CONFIRM = "btn_self_edit_warning_confirm"
    const val BTN_SELF_EDIT_WARNING_REVERT = "btn_self_edit_warning_revert"
    const val BTN_CARD_HISTORY = "btn_card_history"
    const val BTN_CARD_HISTORY_RESTORE = "btn_card_history_restore"
    const val SHEET_CARD_HISTORY = "sheet_card_history"
    const val BTN_CORRECTION_SELF_EDIT_LINK = "btn_correction_self_edit_link"

    const val BTN_VOICE_SEARCH = "btn_voice_search"
    const val SHEET_VOICE_SEARCH = "sheet_voice_search"

    const val BTN_REVIEW_WORD = "btn_review_word"
    const val BTN_RETRY_ENRICHMENT = "btn_retry_enrichment"
    const val SHEET_REVIEW_WORD = "sheet_review_word"
    const val BTN_REVIEW_CLOSE = "btn_review_close"
    const val REVIEW_SUGGESTION = "review_suggestion"
    const val BTN_REVIEW_REJECT = "btn_review_reject"
    const val BTN_REVIEW_SEARCH_AGAIN = "btn_review_search_again"
    const val BTN_REVIEW_CONFIRM = "btn_review_confirm"

    const val SETTINGS_SECTION_NOTIFICATIONS = "settings_section_notifications"
    const val SETTINGS_NOTIF_STUDY = "settings_notif_study"
    const val SETTINGS_NOTIF_CARDS = "settings_notif_cards"
    const val SETTINGS_NOTIF_TIME = "settings_notif_time"
}
